--- a/smileskitchen.html
+++ b/smileskitchen.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="smileskitchen.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,17 +12,26 @@
     <title>SMILE'S KITCHEN</title>
 </head>
 <body>      
-    <header>        <nav class="nav" id="nav" >
+    <header>  
+      <nav class="nav" id="nav" >
             <div class="head"><h1><i class="fas fa-utensils"></i>Sk</h1></div>
             <div class="navlinks">
                 <ul>
-                    <li><a href="#nav">Home</a></li>
+                    <li><a href="#container">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#find-food">Find food</a></li>
                     <li><a href="#testimonial">Testimonials</a></li>
                 </ul>
             </div>
         </nav>
+        <h1 class="small-head"><em>smile's kitchen  <i class="fas fa-utensils"></i></em></h1>
+        <div class="links">
+        <ul >
+            <li><a href="#container"><i class="fa fa-home" ></i><p>home</p></a></li>
+            <li><a href="#find-food"><i class="fas fa-bread-slice"></i><p>foods</p></a></li>
+            <li><a href="#order"><i class="fa fa-list-alt" ></i><p>order</p></a></li>
+        </ul>
+    </div>
     </header>
     <main>
         <a href="#container"> <div class="chef"><i class="fas fa-chevron-up"></i></div></a>
@@ -31,7 +40,7 @@
             <div class="home-text">
                 <p> &#9733 EASY WAY TO ORDER YOUR FOOD</p>
                     <h2>Order Tasty And <br> Fresh Food <span> Anytime!</span></h2>
-                   <p> Just confirm your order and enjoy our delicious meal and fast delivery</p>
+                   <p class="low-p"> Just confirm your order and enjoy our delicious meal and fast delivery</p>
                    <a href="#order" class="btn">Order Now</a>
             </div>
             <div class="home-img" >
@@ -54,9 +63,12 @@
             </div>
             <div class="about-text">
                 <h2>smile's kitchen</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
                     Minima quo fugit iusto ullam iure adipisci eum quibusdam eligendi quae odit eos necessitatibus labore,
-                     optio nemo ea similique ab voluptatibus ducimus.</p>
+                     optio nemo ea similique ab voluptatibus ducimus. Lorem ipsum dolor sit,
+                      amet consectetur adipisicing elit. Exercitationem nesciunt quam aliquam et odit rem!
+                </p>
             </div>
         </div>
     </section>
@@ -91,7 +103,7 @@
             <a href="#order" class="btn1">Order Now</a>
             </div>
             <div class="food">
-               <div class="foode"> <img src="food-pics-2/jollofAndFriedrice.jfif" alt=""></div>
+               <div class="foode"> <img src="food_pics/jollofAndFriedrice.jfif" alt=""></div>
                 <div class="info">
                 <p>Fried Rice with chicken</p>
                 <p>#2000</p>
@@ -105,21 +117,21 @@
         <h2>Testimonials</h2>
         <div class="testimonies">
             <div class="test1">
-                <img src="jollof.jfif" alt="">
+                <img src="food_pics/jollof.jfif" alt="">
                 <p><i class="fa fa-quote-left" aria-hidden="true"></i><br> Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                      Odit sint nam tempora numquam nostrum debitis exercitationem 
                      enim impedit doloribus beatae. <br><i class="fa fa-quote-right" aria-hidden="true"></i></p>
                      <span> &#9733 &#9733 &#9733 &#9733 &#9733</span>
             </div>
             <div class="test1">
-                <img src="jollof.jfif" alt="">
+                <img src="food_pics/jollof.jfif" alt="">
                 <p><i class="fa fa-quote-left" aria-hidden="true"></i><br> Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                      Odit sint nam tempora numquam nostrum debitis exercitationem 
                      enim impedit doloribus beatae. <br><i class="fa fa-quote-right" aria-hidden="true"></i></p>
                      <span> &#9733 &#9733 &#9733 &#9733 &#9733</span>
             </div>
             <div class="test1">
-                <img src="jollof.jfif" alt="">
+                <img src="food_pics/jollof.jfif" alt="">
                 <p><i class="fa fa-quote-left" aria-hidden="true"></i> <br> Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                      Odit sint nam tempora numquam nostrum debitis exercitationem 
                      enim impedit doloribus beatae. <br><i class="fa fa-quote-right" aria-hidden="true"></i></p>
@@ -178,13 +190,13 @@
        <div class="sub-main">
         <p>Subscribe to our newsletter </p>
         <label for="mail">
-            <input type="email" placeholder="Enter your email" id="mail">
+            <input type="email" placeholder="Enter your email" id="mail" required>
         </label>
         <input type="submit" name="subcribe" id="subsub" value="Subscribe">
        </div>
     </section>
     <section class="footer">
-        <h2>THE SMILE'S KIKCHEN</h2>
+        <h2>THE SMILE'S KITCHEN</h2>
         <div class="foot">
             <div class="foot1">
                 <p>contact us</p>
@@ -201,7 +213,7 @@
                 <li><a href="#container">HOME</a></li>
                 <li><a href="#about">ABOUT</a></li>
                 <li><a href="#find-food">FIND FOOD</a></li>
-                <li><a href="#testimonial">TESTIMONIES</a></li>Kk
+                <li><a href="#testimonial">TESTIMONIES</a></li>
             </ul>
             </div>
         </div>
