made use of js typed animation
added animated typed text to the page

--- a/smileskitchen.html
+++ b/smileskitchen.html
@@ -50,6 +50,7 @@
                     <li class="btno"></li>
                     <li class="btno"></li>
                 </ul>
+                <h2>We <span class="element"></span></h2>
             </div>
         </div>
     
@@ -148,15 +149,15 @@
         <form action="validateForm.html" onsubmit="return validate()">
             <label for="name">
                 <p>Enter your name</p>
-            <input type="text" placeholder="e.g John Doe" id="name" >
+            <input type="text" placeholder="e.g John Doe" id="name" />
         </label>
         <label for="email">
            <p> Enter your email</p>
-            <input type="email" placeholder="e.g example@mail.com" id="email" >
+            <input type="email" placeholder="e.g example@mail.com" id="email" />
         </label>
         <label for="pnone-no">
            <p> Enter your phone no.</p>
-            <input type="number" placeholder="e.g 09080111111" id="phone" >
+            <input type="number" placeholder="e.g 09080111111" id="phone" />
         </label>
         <select name="choose food" id="choose-food" >
             <option value="" >choose dish</option>
@@ -167,7 +168,7 @@
         </select>
         <label for="no of chicken">
             <p>Enter no of chicken</p>
-            <input type="number" placeholder="enter preferred amount" id="chickno" >
+            <input type="number" placeholder="enter preferred amount" id="chickno" />
         </label>
         <input type="submit" value="place order">
         </form>
@@ -190,9 +191,9 @@
        <div class="sub-main">
         <p>Subscribe to our newsletter </p>
         <label for="mail">
-            <input type="email" placeholder="Enter your email" id="mail" required>
+            <input type="email" placeholder="Enter your email" id="mail" required />
         </label>
-        <input type="submit" name="subcribe" id="subsub" value="Subscribe">
+        <input type="submit" name="subcribe" id="subsub" value="Subscribe" />
        </div>
     </section>
     <section class="footer">
@@ -219,8 +220,8 @@
         </div>
     </section>
 </main>
+<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
    <script src="smilekitchen.js"></script>
     <!-- payment type -->
-    <!-- https://drive.google.com/drive/folders/1sjjQBZK90IGWqsJ_BcuIby0GKIq6Au1k?usp=sharing -->
 </body>
 </html>
