added social media handles link

--- a/smileskitchen.html
+++ b/smileskitchen.html
@@ -202,11 +202,12 @@
             <div class="foot1">
                 <p>contact us</p>
                 <ul>
-                    <li> <a href="#"> <i class="fa-brands fa-facebook"></i></a></li>
-                    <li> <a href="#"> <i class="fa-brands fa-twitter"></i></a></li>
-                    <li><a href="#"> <i class="fa-brands fa-whatsapp"></i></a></li>
-                    <li><a href="#"> <i class="fa-brands fa-instagram"></i></a></li>
-                </ul>
+                     <li> <a href="https://www.facebook.com/profile.php?id=100007056585591"> <i class="fa-brands fa-facebook"></i></a></li>
+                     <li> <a href="https://twitter.com/DeRalph15?t=KLXOXWSRgyfr6a98aA_WSQ&s=09"> <i class="fa-brands fa-twitter"></i></a></li>
+                     <li><a href="https://wa.me/message/QHR4IAXUJC55J1"> <i class="fa-brands fa-whatsapp"></i></a></li>
+                     <li><a href="https://www.instagram.com/iam_raphael15/"> <i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/john-raphael-81226522a"> <i class="fa-brands fa-linkedin"></i></a></li>
+                    </ul>
             </div>
             <div class="foot2">
                 <p>Quick Links</p>
