--- a/index.html
+++ b/index.html
@@ -202,11 +202,11 @@
             <div class="foot1">
                 <p>contact us</p>
                 <ul>
-                     <li> <a href="https://www.facebook.com/profile.php?id=100007056585591"> <i class="fa-brands fa-facebook"></i></a></li>
-                     <li> <a href="https://twitter.com/DeRalph15?t=KLXOXWSRgyfr6a98aA_WSQ&s=09"> <i class="fa-brands fa-twitter"></i></a></li>
-                     <li><a href="https://wa.me/message/QHR4IAXUJC55J1"> <i class="fa-brands fa-whatsapp"></i></a></li>
-                     <li><a href="https://www.instagram.com/iam_raphael15/"> <i class="fa-brands fa-instagram"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/john-raphael-81226522a"> <i class="fa-brands fa-linkedin"></i></a></li>
+                     <li> <a href="https://www.facebook.com/profile.php?id=100007056585591" target="_blank"> <i class="fa-brands fa-facebook"></i></a></li>
+                     <li> <a href="https://twitter.com/DeRalph15?t=KLXOXWSRgyfr6a98aA_WSQ&s=09" target="_blank"> <i class="fa-brands fa-twitter"></i></a></li>
+                     <li><a href="https://wa.me/message/QHR4IAXUJC55J1" target="_blank"> <i class="fa-brands fa-whatsapp"></i></a></li>
+                     <li><a href="https://www.instagram.com/iam_raphael15/" target="_blank"> <i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/john-raphael-81226522a" target="_blank"> <i class="fa-brands fa-linkedin"></i></a></li>
                     </ul>
             </div>
             <div class="foot2">
