--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div class="food">
                <div class="foode"> <img src="food_pics/Screenshot_20220303-105604_1.png" alt=""></div>
                 <div class="info">
-                <p>Fried Rice with chicken</p>
+                <p>jollof Rice with chicken</p>
                 <p>#2000</p>
             </div>
             <a href="#order" class="btn1">Order Now</a>
@@ -106,7 +106,7 @@
             <div class="food">
                <div class="foode"> <img src="food_pics/jollofAndFriedrice.jfif" alt=""></div>
                 <div class="info">
-                <p>Fried Rice with chicken</p>
+                <p>Fried Rice and jollof with chicken</p>
                 <p>#2000</p>
             </div>
             <a href="#order" class="btn1">Order Now</a>
