--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         </label>
         <label for="pnone-no">
            <p> Enter your phone no.</p>
-            <input type="number" placeholder="e.g 09080111111" id="phone" />
+            <input type="text" placeholder="e.g 09080111111" id="phone" maxlength="11">
         </label>
         <select name="choose food" id="choose-food" >
             <option value="" >choose dish</option>
